test/fix/style: Manual testing error fixed where recipe ingredients spill out of container. Now responsive to length of ingredients and description.

--- a/recipes/static/recipes/css/recipes.css
+++ b/recipes/static/recipes/css/recipes.css
@@ -159,15 +159,24 @@ input[type="file"] {
         height: 7rem;
     }
 
+    .recipe-list img {
+        height: 18rem;
+    }
+
     .recipe-list .button-yellow {
         width: 50%;
     }
 
     /*---------------Recipe-detail---------------*/
+    .recipe {
+        position: relative;
+        height: 100%;
+    }
+
     .recipe img {
-        height: 36rem;
+        height: 100%;
         position: absolute;
-        bottom: 40%;
+        top: 0;
         z-index: -1;
         width: 100%;
         border: 1px solid #d4c059;
@@ -175,7 +184,6 @@ input[type="file"] {
 
     .details {
         background-color: rgba(0, 0, 0, 0.6);
-        height: 36rem;
     }
 
     .featured-product img {
